[project]
name = "cxm-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "natsort>=8.4.0",
    "opencv-python-headless>=4.11.0.86",
    "scikit-image>=0.25.2",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "thop>=0.1.1.post2209072238",
]
